# htpydantic

./: LICENSE  README.md  pyproject.toml  tests.py
htpydantic/: __init__.py
